--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -4,55 +4,59 @@
 	'forum-active': ['Hide','Show'],
 	'forum-preset': ['all','announce','members','staff','admins','archive','custom']};
 </script>
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Forums</a></div>
-</div>
-<div class="colblock_right">
-	{{range .ItemList}}
-	<div class="rowitem editable_parent" style="font-weight: normal;{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
-		<a data-field="forum-name" data-type="text" class="editable_block" style="font-size: 20px;position:relative;top: -2px;text-transform: none;{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
-		<span style="float: right;">
-		<span data-field="forum-active" data-type="list" class="username editable_block hide_on_zero" title="Hidden" style="color: black;{{if .Active}}display:none;" data-value="1"{{else}}" data-value="0"{{end}}>🕵️</span>
-		{{if .PresetEmoji}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" title="{{.PresetLang}}">{{.PresetEmoji}}</span>
-		{{else if .PresetLang}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block">{{.PresetLang}}</span>{{else}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" style="display:none;">{{.PresetLang}}</span>{{end}}
-		{{if gt .ID 0}}<a class="username edit_fields hide_on_edit">Edit</a>
-		<a href="/panel/forums/edit/submit/{{.ID}}"><button class='username submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
-		{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="username">Delete</a>{{end}}
-		</span>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Forums</a></div>
 	</div>
-	{{end}}
-</div><br />
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Add Forum</a></div>
-</div>
-<div class="colblock_right">
-	<form action="/panel/forums/create/?session={{.CurrentUser.Session}}" method="post">
-		<div class="formrow">
-			<div class="formitem"><a>Forum Name</a></div>
-			<div class="formitem"><input name="forum-name" type="text" /></div>
+	<div class="colstack_item">
+		{{range .ItemList}}
+		<div class="rowitem editable_parent" style="font-weight: normal;{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
+			<a data-field="forum-name" data-type="text" class="editable_block" style="font-size: 20px;position:relative;top: -2px;text-transform: none;{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
+			<span style="float: right;">
+			<span data-field="forum-active" data-type="list" class="username editable_block hide_on_zero" title="Hidden" style="color: black;{{if .Active}}display:none;" data-value="1"{{else}}" data-value="0"{{end}}>🕵️</span>
+			
+			{{if .PresetEmoji}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" title="{{.PresetLang}}">{{.PresetEmoji}}</span>
+			{{else if .PresetLang}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block">{{.PresetLang}}</span>{{else}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" style="display:none;">{{.PresetLang}}</span>{{end}}
+			
+			{{if gt .ID 0}}<a class="username edit_fields hide_on_edit">Edit</a>
+			<a href="/panel/forums/edit/submit/{{.ID}}"><button class='username submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
+			{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="username">Delete</a>{{end}}
+			</span>
 		</div>
-		<div class="formrow">
-			<div class="formitem"><a>Hidden?</a></div>
-			<div class="formitem"><select name="forum-active">
-				<option value="1">Yes</option>
-				<option value="0">No</option>
-			</select></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><a>Preset</a></div>
-			<div class="formitem"><select name="forum-preset">
-				<option selected value="all">Everyone</option>
-				<option value="announce">Announcements</option>
-				<option value="members">Member Only</option>
-				<option value="staff">Staff Only</option>
-				<option value="admins">Admin Only</option>
-				<option value="archive">Archive</option>
-				<option value="custom">Custom</option>
-			</select></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton">Add Forum</button></div>
-		</div>
-	</form>
+		{{end}}
+	</div>
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Add Forum</a></div>
+	</div>
+	<div class="colstack_item">
+		<form action="/panel/forums/create/?session={{.CurrentUser.Session}}" method="post">
+			<div class="formrow">
+				<div class="formitem"><a>Forum Name</a></div>
+				<div class="formitem"><input name="forum-name" type="text" /></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><a>Hidden?</a></div>
+				<div class="formitem"><select name="forum-active">
+					<option value="1">Yes</option>
+					<option value="0">No</option>
+				</select></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><a>Preset</a></div>
+				<div class="formitem"><select name="forum-preset">
+					<option selected value="all">Everyone</option>
+					<option value="announce">Announcements</option>
+					<option value="members">Member Only</option>
+					<option value="staff">Staff Only</option>
+					<option value="admins">Admin Only</option>
+					<option value="archive">Archive</option>
+					<option value="custom">Custom</option>
+				</select></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><button name="panel-button" class="formbutton">Add Forum</button></div>
+			</div>
+		</form>
+	</div>
 </div>
 {{template "footer.html" . }}
