--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -1,10 +1,14 @@
-<div class="colblock_left">
-	<div class="rowitem rowhead"><a>My Account</a></div>
-	<div class="rowitem passive"><a href="/user/edit/avatar/">Change Avatar</a></div>
-	<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
-	<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
-	<div class="rowitem passive"><a href="/user/edit/email/">Change Email</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
+<div class="colstack_left">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>My Account</a></div>
+	</div>
+	<div class="colstack_item">
+		<div class="rowitem passive"><a href="/user/edit/avatar/">Change Avatar</a></div>
+		<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
+		<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
+		<div class="rowitem passive"><a href="/user/edit/email/">Change Email</a></div>
+		<div class="rowitem passive"><a>Coming Soon</a></div>
+		<div class="rowitem passive"><a>Coming Soon</a></div>
+		<div class="rowitem passive"><a>Coming Soon</a></div>
+	</div>
 </div>
