--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -1,21 +1,23 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Edit Username</a></div>
-</div>
-<div class="colblock_right">
-	<form action="/user/edit/username/submit/" method="post">
-		<div class="formrow">
-			<div class="formitem"><a>Current Username</a></div>
-			<div class="formitem">{{.CurrentUser.Name}}</div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><a>New Username</a></div>
-			<div class="formitem"><input name="account-new-username" type="text" /></div>
-		</div>
-		<div class="formrow">
-			<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
-		</div>
-	</form>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Edit Username</a></div>
+	</div>
+	<div class="colstack_item">
+		<form action="/user/edit/username/submit/" method="post">
+			<div class="formrow">
+				<div class="formitem"><a>Current Username</a></div>
+				<div class="formitem">{{.CurrentUser.Name}}</div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><a>New Username</a></div>
+				<div class="formitem"><input name="account-new-username" type="text" /></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
+			</div>
+		</form>
+	</div>
 </div>
 {{template "footer.html" . }}
