--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,9 +1,11 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Dashboard</a></div>
-</div>
-<div class="colblock_right">
-	<div class="rowitem passive">Coming Soon...</div>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Dashboard</a></div>
+	</div>
+	<div class="colstack_item">
+		<div class="rowitem passive">Coming Soon...</div>
+	</div>
 </div>
 {{template "footer.html" . }}
