--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -1,19 +1,21 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Plugins</a></div>
-</div>
-<div class="colblock_right">
-	{{range .ItemList}}
-	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
-		<a {{if .URL}}href="{{.URL}}" {{end}}class="editable_block" style="font-size: 20px;position:relative;top: -2px;">{{.Name}}</a><br />
-		<small style="margin-left: 2px;">Author: {{.Author}}</small>
-		<span style="float: right;">
-			{{if .Settings}}<a href="/panel/settings/" class="username">Settings</a>{{end}}
-			{{if .Active}}<a href="/panel/plugins/deactivate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Deactivate</a>
-			{{else}}<a href="/panel/plugins/activate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Activate</a>{{end}}
-		</span>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Plugins</a></div>
 	</div>
-	{{end}}
+	<div class="colstack_item">
+		{{range .ItemList}}
+		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
+			<a {{if .URL}}href="{{.URL}}" {{end}}class="editable_block" style="font-size: 20px;position:relative;top: -2px;">{{.Name}}</a><br />
+			<small style="margin-left: 2px;">Author: {{.Author}}</small>
+			<span style="float: right;">
+				{{if .Settings}}<a href="/panel/settings/" class="username">Settings</a>{{end}}
+				{{if .Active}}<a href="/panel/plugins/deactivate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Deactivate</a>
+				{{else}}<a href="/panel/plugins/activate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Activate</a>{{end}}
+			</span>
+		</div>
+		{{end}}
+	</div>
 </div>
 {{template "footer.html" . }}
