--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -1,14 +1,16 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Settings</a></div>
-</div>
-<div class="colblock_right">
-	{{ range $key, $value := .Something }}
-	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
-		<a href="/panel/settings/edit/{{$key}}" class="editable_block" style="font-size: 20px;position:relative;top: -2px;">{{$key}}</a>
-		<a style="float: right;">{{$value}}</a>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Settings</a></div>
 	</div>
-	{{end}}
+	<div class="colstack_item">
+		{{range $key, $value := .Something}}
+		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
+			<a href="/panel/settings/edit/{{$key}}" class="editable_block" style="font-size: 20px;position:relative;top: -2px;">{{$key}}</a>
+			<a style="float: right;">{{$value}}</a>
+		</div>
+		{{end}}
+	</div>
 </div>
 {{template "footer.html" . }}
