--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -1,40 +1,42 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <style type="text/css">.rowitem::after {content:"";display:block;clear:both;}</style>
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Primary Themes</a></div>
-</div>
-<div class="colblock_right">
-	{{range .PrimaryThemes}}
-	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
-		<span style="float: left;">
-			<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
-			<small style="margin-left: 2px;">Author: {{.Creator}}</small>
-		</span>
-		<span style="float: right;">
-			{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
-			{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
-			{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
-		</span>
+<div class="colstack_right">
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Primary Themes</a></div>
 	</div>
-	{{end}}
-</div>
-<div class="colblock_right">
-	<div class="rowitem rowhead"><a>Variant Themes</a></div>
-</div>
-<div class="colblock_right">
-	{{range .VariantThemes}}
-	<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
-		<span style="float: left;">
-			<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
-			<small style="margin-left: 2px;">Author: {{.Creator}}</small>
-		</span>
-		<span style="float: right;">
-			{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
-			{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
-			{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
-		</span>
+	<div class="colstack_item">
+		{{range .PrimaryThemes}}
+		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
+			<span style="float: left;">
+				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
+				<small style="margin-left: 2px;">Author: {{.Creator}}</small>
+			</span>
+			<span style="float: right;">
+				{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
+				{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
+				{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
+			</span>
+		</div>
+		{{end}}
 	</div>
-	{{end}}
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Variant Themes</a></div>
+	</div>
+	<div class="colstack_item">
+		{{range .VariantThemes}}
+		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
+			<span style="float: left;">
+				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
+				<small style="margin-left: 2px;">Author: {{.Creator}}</small>
+			</span>
+			<span style="float: right;">
+				{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
+				{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
+				{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
+			</span>
+		</div>
+		{{end}}
+	</div>
 </div>
 {{template "footer.html" . }}
