--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -17,5 +17,34 @@
 		</div>
 		{{end}}
 	</div>
+	<div class="colstack_item colstack_head">
+		<div class="rowitem rowhead"><a>Create Group</a></div>
+	</div>
+	<div class="colstack_item">
+		<form action="/panel/groups/create/?session={{.CurrentUser.Session}}" method="post">
+			<div class="formrow">
+				<div class="formitem"><a>Name</a></div>
+				<div class="formitem"><input name="group-name" type="text" /></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><a>Type</a></div>
+				<div class="formitem">
+					<select name="group-type"{{if not .CurrentUser.Perms.EditGroupGlobalPerms}} disabled{{end}}>
+						<option selected>Member</option>
+						<option{{if not .CurrentUser.Perms.EditGroupSuperMod}} disabled{{end}}>Mod</option>
+						<option{{if not .CurrentUser.Perms.EditGroupAdmin}} disabled{{end}}>Admin</option>
+						<option>Banned</option>
+					</select>
+				</div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><a>Tag</a></div>
+				<div class="formitem"><input name="group-tag" type="text" /></div>
+			</div>
+			<div class="formrow">
+				<div class="formitem"><button name="panel-button" class="formbutton">Add Group</button></div>
+			</div>
+		</form>
+	</div>
 </div>
 {{template "footer.html" . }}
