Added support for modlogs. Added support for more mod-action posts in topics.
Fixed an easter egg.
Fixed a few redirects.
Fixed an issue with users not being loaded if they weren't already in the cache in the User Editor.

--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -9,4 +9,5 @@
 	{{if .CurrentUser.Perms.ManageThemes}}<div class="rowitem passive"><a href="/panel/themes/">Themes</a></div>{{end}}
 	{{if .CurrentUser.Perms.ManagePlugins}}<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>{{end}}
 	<div class="rowitem passive"><a href="/forum/1">Reports</a></div>
+	<div class="rowitem passive"><a href="/panel/logs/mod/">Logs</a></div>
 </div>
