Router Generator WIP
Added a test for one of the router algorithms.
Added the ViewAdminLogs permission. Adminlogs are coming soon!
The empty comments next to HandleFuncs on main.go are there to remind me about which routes I've added to the router generator route list.
Fixed the Modlogs Page so that you can view it without the ManageThemes permissions. I accidentally used the wrong permission there before.
Changed the router algorithm to align better with the upcoming generated router. It's faster too.

--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -12,7 +12,7 @@
 </div>
 <div class="colstack_right">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem rowhead"><a>Moderation Logs</a></div>
+		<div class="rowitem rowhead"><a>Administration Logs</a></div>
 	</div>
 	<div class="colstack_item">
 		{{range .Logs}}
