Added the Control Panel Dashboard. Bumped the version requirements upto Go 1.8 Added gopsutil as a dependency.
Added the minify_templates and super_debug config.go options.
Cleaned up the console.
config.go is a little more organised now.

--- a/templates/panel-modlogs.html
+++ b/templates/panel-modlogs.html
@@ -20,7 +20,7 @@
 			<a style="font-size: 17px;">{{.Action}}</a><br />
 			<small style="margin-left: 2px;">IP: {{.IPAddress}}</small>
 			<span style="float: right;">
-				<span style="font-size: 16px;position:relative;top: -2px;">{{.DoneAt}}</span>
+				<span style="font-size: 16px;">{{.DoneAt}}</span>
 			</span>
 		</div>
 		{{end}}
