--- a/themes/cosmo/public/main.css
+++ b/themes/cosmo/public/main.css
@@ -196,13 +196,8 @@ hr { color: silver; border: 1px solid silver; }
 	border-left: 1px solid black;
 	border-right: 1px solid black;
 }
-.rowblock:first-of-type {
-	margin-top: 8px;
-}
-.rowitem:not(:last-child)
-{
-	border-bottom: 1px dotted #ccc;
-}
+.rowblock:first-of-type { margin-top: 8px; }
+.rowitem:not(:last-child) { border-bottom: 1px dotted #ccc; }
 
 .rowhead, .colhead {
 	background: #ce2424;
@@ -283,6 +278,39 @@ hr { color: silver; border: 1px solid silver; }
 .colstack_left:empty { display: none; }
 .colstack_right:empty { display: none; }
 
+.colstack_grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	/*grid-gap: 15px;*/
+	grid-gap: 12px;
+	margin-left: 5px;
+}
+.grid_item {
+	border: 1px solid #ccc;
+	word-wrap: break-word;
+	background-color: white;
+	width: 100%;
+	overflow: hidden;
+}
+.grid_stat, .grid_istat {
+	/*padding-top: 15px;*/
+	text-align: center;
+	/*padding-bottom: 15px;
+	font-size: 20px;*/
+	padding-top: 12px;
+	padding-bottom: 12px;
+	font-size: 16px;
+}
+.grid_istat {
+	/*margin-bottom: 10px;*/
+	margin-bottom: 5px;
+}
+
+.stat_green { background-color: lightgreen; border-color: green; }
+.stat_orange { background-color: #ffe4b3; border-color: orange; }
+.stat_red { background-color: #ffb2b2; border-color: red; }
+.stat_disabled { background-color: lightgray; border-color: gray; }
+
 .colitem
 {
 	padding-left: 8px;
@@ -302,10 +330,7 @@ hr { color: silver; border: 1px solid silver; }
 	text-decoration: none;
 	color: black;
 }
-.colitem a:hover
-{
-	color: silver;
-}
+.colitem a:hover { color: silver; }
 
 .col_left
 {
