--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,11 +1,11 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <div class="colstack_right">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem rowhead"><a>Dashboard</a></div>
-	</div>
-	<div class="colstack_item">
-		<div class="rowitem passive">Coming Soon...</div>
+	<div class="colstack_grid">
+{{range .GridItems}}
+		<div class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
+		{{if .Background}}background-color: {{.Background}};{{end}}">{{.Body}}</div>
+{{end}}
 	</div>
 </div>
 {{template "footer.html" . }}
