Added support for Websockets. The Control Panel Dashboard now updates every second. You can now see how many guests and users are online via the Control Panel Dashboard. The Control Panel Dashboard is now a little more mobile friendly.

--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -3,7 +3,7 @@
 <div class="colstack_right">
 	<div class="colstack_grid">
 {{range .GridItems}}
-		<div class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
+		<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}
 		{{if .Background}}background-color: {{.Background}};{{end}}">{{.Body}}</div>
 {{end}}
 	</div>
